// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codec byte goldens (#22) > seed 1: encoded keyframe byte hash 1`] = `
{
  "byteLength": 67740,
  "hash": "ce742d3b",
}
`;

exports[`codec byte goldens (#22) > seed 42: encoded keyframe byte hash 1`] = `
{
  "byteLength": 67740,
  "hash": "28b606a8",
}
`;

exports[`codec byte goldens (#22) > seed 1337: encoded keyframe byte hash 1`] = `
{
  "byteLength": 67740,
  "hash": "f8e2a654",
}
`;
